tests/long_directory_names/long_directory_names.exp

Flow check:
Error ------------------------------------------------------------------------------------------------------ foo.js:3:17

Cannot assign `123` to `x` because number [1] is incompatible with string [2]. [incompatible-type]

   foo.js:3:17
   3| let x: string = 123
                      ^^^ [1]

References:
   foo.js:3:8
   3| let x: string = 123
             ^^^^^^ [2]



Found 1 error

Flow status:
Error ------------------------------------------------------------------------------------------------------ foo.js:3:17

Cannot assign `123` to `x` because number [1] is incompatible with string [2]. [incompatible-type]

   foo.js:3:17
   3| let x: string = 123
                      ^^^ [1]

References:
   foo.js:3:8
   3| let x: string = 123
             ^^^^^^ [2]



Found 1 error
